0.1-alpha3/_sources/gene/AGAP000233.rst.txt
:orphan:



AGAP000233
==========

Location: **X:4,379,330-4,384,049**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP000233>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=X:4379330-4384049#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/AOM/X/1/index`
      - H12
      - Angola *An. coluzzii*
      - X:4,340,000-4,380,000
      - 519
      - 97.8%
      - nan
    * - :doc:`../signal/XPEHH/AOM.GWA/X/1/index`
      - XPEHH
      - Angola *An. coluzzii*
      - X:4,340,000-4,380,000
      - 242
      - 100.0%
      - nan
    * - :doc:`../signal/XPEHH/AOM.GAS/X/1/index`
      - XPEHH
      - Angola *An. coluzzii*
      - X:4,340,000-4,420,000
      - 137
      - 100.0%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/AOM.BFM/X/1/index`
      - XPEHH
      - Angola *An. coluzzii*
      - X:4,320,000-4,360,000
      - 292
      - 99.9%
      - nan
    * - :doc:`../signal/IHS/AOM/X/1/index`
      - IHS
      - Angola *An. coluzzii*
      - X:4,280,000-4,360,000
      - 178
      - 99.9%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP000233';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


